# base-bascktest-exporter

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  deploy.sh
config/: base_uniswap_v3_top5_selected_pools.base_eth_usdc.txt  default_selected_pools.base_eth_usdc.txt  default_stable_tokens.base_eth_usdc.json
src/: catalog.rs  cli.rs  contract.rs  lib.rs  main.rs
src/export/: mod.rs  pools_manifest.rs  raw.rs  shard.rs  state.rs
src/protocol/: registry.rs
src/source/: fallback_token.rs  indexer_api.rs  mod.rs  node_rpc.rs  pool_metadata_backfill.rs
tests/: catalog_resolution.rs  contract_fixtures.rs  layout_validation.rs  protocol_registry.rs  source_indexer_api.rs  source_node_rpc.rs
tests/fixtures/pool_manifest/: invalid_version.json  missing_required_fields.json  valid_minimal.json
tests/fixtures/raw/: missing_block_timestamp.json  pancake_v3_valid.json  standard_v3_valid.json
tests/fixtures/stable_tokens/: invalid_address.json  missing_required_fields.json  valid_minimal.json
tests/fixtures/state/: invalid_block_number_type.json  missing_token1_balance_raw.json  valid_state_line.json
tests/fixtures/unresolved_stable_side_report/: missing_required_fields.json  valid_minimal.json
